dist/tests/utils/errors/getErrorCodeFromErrorName.d.ts
import ProgramErrorName from "tests/constants/ProgramErrorName";
export default function getErrorCodeFromErrorName(errorName: ProgramErrorName): number;
//# sourceMappingURL=getErrorCodeFromErrorName.d.ts.map